--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,7 +13,7 @@
             <a href="index.html" class="navbar-brand">Ana Sayfa</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="active"><a href="musteri.html">Musteriler</a></li>
+            <li><a href="musteri.html">Musteriler</a></li>
             <li><a href="kayit.html">Yeni Kayit</a></li>
         </ul>
     </div>
@@ -21,9 +21,9 @@
 <div class="container">
     <h3>Otoparkimiza Hosgeldiniz</h3>
     <a href="musteri.html">
-    <button class="btn btn-primary">Tum musteriler</button></a>
+    <button class="btn btn-info">Tum musteriler</button></a>
     <a href="kayit.html">
-    <button class="btn btn-primary">Yeni kayit</button></a>
+    <button class="btn btn-info">Yeni kayit</button></a>
 </div>
 
 </body>
